--- a/Domain/Domain.fsproj
+++ b/Domain/Domain.fsproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Library.fs"/>
+        <Compile Include="Tasks.fs" />
     </ItemGroup>
 
 </Project>
